# VOIP

VOIP_AccessPoint/: Makefile.am  Makefile.in  Readme  Readme.txt  func.c  main.c  main.h  struct.h
VOIP_AccessPoint/test/serial_test/: Makefile.am  Makefile.in  func.c  func.h  main.c  main.h  struct.h
VOIP_AccessPoint/test/sip_sim_test/: Makefile  voip_test.c
VOIP_AccessPoint/test/sip_test/: command1  command2  func.c  main.c  readme  vector
VOIP_HandDeviceConnectedByInternet/: Makefile  Makefile.am  Makefile.in  Readme.txt  calls.c  calls.h  commands.c  commands.h  main.c  main.h  mainconfig.h  sdptools.c  sdptools.h  serial.c  serial.h  sound-ortp.c
VOIP_HandDeviceConnectedByInternet/adpcm_serial_test/: g72x.c  main.c  readme.txt  serial.c  soundplay.c
VOIP_HandDeviceConnectedByInternet/adpcm_serial_test/back/: g726.c  recv.c
VOIP_HandDeviceConnectedByInternet/adpcm_serial_test/g726_test/: g711.c  g726.c  g726.h  g726_16.c  main.c  makefile  readme  serial.c  serial.h  soundplay.c
VOIP_HandDeviceConnectedByInternet/serial_test/: Makefile  crc-8.c  crc-8.h  serial.c  serial.h
